# unilance

./: .clang-format  .gitignore  .gitmodules  .nvim.lua  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  bear  build.rs  mesc_wrap.h  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: arm_none_eabi_ubuntu_install.sh
.github/workflows/: build.yml
c_src/: MESC_F405.h
c_src/hardware_conf/: bg_etmax.h
core/: Cargo.toml  build.rs
core-control/: Cargo.toml  README.md
core-control/src/: ahrs.rs  corelink.rs  imu.rs  lib.rs
core-control/src/balance/: algo.rs  mod.rs
core-supervisor/: Cargo.toml  build.rs
core-supervisor/src/: info.rs  input.rs  lib.rs  storage.rs
core-supervisor/src/input/: gesture.rs  gestures.rs  mod.rs  power_aux.rs
core/src/: lib.rs
core_control/: Cargo.toml
core_control/src/: lib.rs
core_control/src/balance/: algo.rs  mod.rs
core_control/src/imu/: mod.rs
core_supervisor/: Cargo.toml
core_supervisor/src/: lib.rs
docs/: FILESYSTEM.md  FOC_CONFIGURATION.md  MESC.md  SECURE_BOOT_AND_KEYS.md  TARGETS.md
docs/drafts/: FILESYSTEM.md  FIRMWARE_UPDATES.md  MESC_LIFECYCLE.md  SECURE_BOOT_AND_KEYS.md
drivers/: Cargo.toml
drivers/src/: bmi160.rs  lib.rs  mpu6500.rs
drivers/src/mpu6500/: mod.rs
lancemate/: Cargo.toml  README.md  gradle.properties  package.json
lancemate/composeApp/: build.gradle.kts
lancemate/composeApp/src/androidMain/: AndroidManifest.xml
lancemate/composeApp/src/androidMain/kotlin/com/arvenora/lancemate/platform/: ColorThemes.android.kt
lancemate/composeApp/src/androidMain/res/values/: strings.xml
lancemate/composeApp/src/commonMain/composeResources/drawable/: arrow_back.xml  arrow_drop_up.xml  bluetooth.xml  bluetooth_connected.xml  bluetooth_searching.xml  cable.xml  close.xml  cloud.xml  cloud_off.xml  dashboard.xml  dashboard_fill.xml  deployed_code.xml  developer_board.xml  files.xml  files_fill.xml  home.xml  link_2.xml  link_off.xml  manufacturing.xml  memory.xml  memory_fill.xml  publish.xml  settings.xml  settings_fill.xml  ssid_chart.xml  star.xml  usb.xml  usb_off.xml
lancemate/composeApp/src/commonMain/kotlin/com/arvenora/lancemate/: App.kt  ConnectionSheet.kt  NavKeys.kt
lancemate/composeApp/src/commonMain/kotlin/com/arvenora/lancemate/nav/: Keys.kt
lancemate/composeApp/src/commonMain/kotlin/com/arvenora/lancemate/platform/: ColorThemes.kt
lancemate/composeApp/src/commonMain/kotlin/com/arvenora/lancemate/ui/: ConfigTab.kt  ConnectionManager.kt  ConnectionSheet.kt  CoreLinkTab.kt  FAB.kt  FilesystemTab.kt  FirmwareTab.kt  LiveDataTab.kt  TopBar.kt
lancemate/composeApp/src/iosMain/kotlin/com/arvenora/lancemate/: MainViewController.kt
lancemate/composeApp/src/jvmMain/kotlin/com/arvenora/lancemate/: main.kt
lancemate/gradle/: libs.versions.toml
lancemate/iosApp/iosApp.xcodeproj/: project.pbxproj
lancemate/lancemate/: settings.gradle.kts
lancemate/lancemate/composeApp/: build.gradle.kts
lancemate/lancemate/composeApp/src/androidMain/res/values/: strings.xml
lancemate/lancemate/composeApp/src/commonMain/composeResources/drawable/: favorite_24px.xml  menu_24px.xml  menu_open_24px.xml
lancemate/lancemate/gradle/: libs.versions.toml
lancemate/lancemate/iosApp/Configuration/: Config.xcconfig
lancemate/lancemate/iosApp/iosApp.xcodeproj/: project.pbxproj
lancemate/src/: main.rs
lancemate/src-tauri/: Cargo.toml  tauri.conf.json
lancemate/src-tauri/src/: main.rs
mesc/: Cargo.toml  README.md  build.rs
mesc/c_src/: hal_types.h  mesc_wrap.c  mesc_wrap.h
mesc/c_src/MESC_Common/Inc/: MESCApp.h  MESCBLDC.h  MESC_MOTOR_DEFAULTS.h  MESC_STM.h  MESCerror.h  MESCfluxobs.h  MESCfoc.h  MESChfi.h  MESChw_setup.h  MESCinput.h  MESClrobs.h  MESCmeasure.h  MESCmotor.h  MESCmotor_state.h  MESCposition.h  MESCpwm.h  MESCsin_lut.h  MESCtemp.h  MPU6050.h  bit_op.h  conversions.h  fingerprint.h
mesc/c_src/MESC_Common/Src/: MESCApp.c  MESCBLDC.c  MESCerror.c  MESCfluxobs.c  MESCfoc.c  MESChfi.c  MESCinput.c  MESClrobs.c  MESCmeasure.c  MESCmotor.c  MESCmotor_state.c  MESCposition.c  MESCpwm.c  MESCsin_lut.c  MESCtemp.c
mesc/c_src/hardware_conf/: hwconf_common.h  hwconf_refactor_to_runtime_conf.h  hwconf_template.h  hwconf_template_og.h  motor_conf_template.h
mesc/c_src/hardware_conf/bg_etmax/: bg_etmax.h  stm32fxxx_hal.h
mesc/c_src/hardware_conf/motors/: README.txt  begode_tile36-3_2.h
mesc/c_src/hardware_conf/stm32_begode_etmax/: hwconf.h  mesc_hal.h
mesc/c_src/hardware_conf/stm32f4_begode_etmax/: MESC_F405.h  hal_types.h  hwconf.h  stm32fxxx_hal.h
mesc/src/: lib.rs  macros.rs  types.rs
port-stm32/: Cargo.toml  build.rs
port-stm32/ld/: kirigiri.x
port-stm32/src/: constants.rs  cpu_usage.rs  main.rs  mesc_impl.rs
port-stm32/src/bsp/: begode_etmax.rs  kirigiri.rs  maizono.rs  mod.rs  naegi.rs
port-stm32/src/driver/: mod.rs  ws281x.rs
port-stm32/src/roles/: control.rs  mod.rs  supervisor.rs
port-stm32/src/roles/control/: real.rs  stub.rs
port-stm32/src/roles/supervisor/: stub.rs
port-stm32/src/tsp/: kirigiri.rs  maizono.rs  mod.rs  naegi.rs
port_stm32/: Cargo.toml
port_stm32/src/bsp/: begode_etmax.rs
port_stm32/src/roles/control/: mod.rs  stub.rs
port_stm32f4/: Cargo.toml  build.rs
port_stm32f4/ld/: begode_etmax.x
port_stm32f4/src/: main.rs  mesc_impl.rs  reg_flags.rs  sthal.rs  sthal_embassy.rs
port_stm32f4/src/bsp/: begode_etmax.rs  mod.rs
port_stm32f4/src/role/: mod.rs
port_stm32f4/src/role/control/: isr.rs  mod.rs  real.rs  stub.rs
port_stm32f4/src/role/supervisor/: isr.rs  mod.rs  real.rs  stub.rs
port_stm32f4/src/roles/: mod.rs
port_stm32f4/src/roles/control/: mod.rs  real.rs
port_stm32f4/src/roles/supervisor/: mod.rs  real.rs  stub.rs
port_stm32f40x/: Cargo.toml
port_stm32f40x/src/: main.rs  sthal_embassy.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proto/: Cargo.toml  README.md
proto/src/: corelink.rs  lib.rs
proto/src/corelink/: control.rs  mod.rs
src/: main.rs
(+11 files in other folders)
