[workspace]
resolver = "3"
members = ["mesc", "core-control", "core-supervisor", "port-stm32", "proto", "proc-macros"]

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# NOTE: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

# NOTE: Done temporarily while Embassy releases their scheduler-deadline feature for
# embassy-executor. When released, remove vendor and replace with normal version
[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "d41b6b0" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "d41b6b0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "d41b6b0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "d41b6b0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "d41b6b0" }
