[workspace]
resolver = "3"
members = ["mesc", "core-control", "core-supervisor", "port-stm32", "proto", "proc-macros", "drivers"]

[profile.release]
lto = true
# Optimize mainly for speed, but if the binary becomes way too big to fit in a bootloader
# partition, switch to "s" or "z"
opt-level = 3
incremental = false
codegen-units = 1
# NOTE: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

# NOTE: Done temporarily until Embassy releases my patches to embassy-stm32 (triggered
# ADC DMA conversions and injected ADC support) in an official release. When that will
# be done, remove this patch section and update the version everywhere
[patch.crates-io]
embassy-stm32 = { git = "https://github.com/voltangle/embassy.git", rev = "c1cb941" }
embassy-executor = { git = "https://github.com/voltangle/embassy.git", rev = "c1cb941" }
embassy-sync = { git = "https://github.com/voltangle/embassy.git", rev = "c1cb941" }
embassy-time = { git = "https://github.com/voltangle/embassy.git", rev = "c1cb941" }
embassy-futures = { git = "https://github.com/voltangle/embassy.git", rev = "c1cb941" }
