[package]
edition = "2024"
name = "core-supervisor"
version = "0.1.0"

[dependencies]
mesc = { path = "../mesc" }
proto = { path = "../proto" }
embassy-time = { version = "0.5.0", features = ["defmt"]}
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
heapless = "0.9.2"
littlefs2 = "0.6.1"
defmt = "1.0.1"

[features]
control_scheme_power_park = []
