[package]
edition = "2024"
name = "unilance_core"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
unilance_mesc = { path = "../mesc" }
embassy-stm32 = { version = "0.5.0", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
micromath = "2.0.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

# First half is different complete EUC ports, second half is specific features that could
# be shared between multiple ports
[features]
bg_etmax = []

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.52"

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/stm32f4" }
]
