[package]
name = "drivers"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
int-enum = { version = "1.2.0", optional = true }
nalgebra = { version = "0.34.1", default-features = false, features = ["defmt"], optional = true }

[features]
mpu6500 = [
    "dep:nalgebra",
    "dep:int-enum",
]
