[package]
edition = "2024"
name = "mesc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
defmt = "1.0.1"
micromath = "2.1.0"
# embedded-hal = "1.0.0"

[build-dependencies]
bindgen = "0.72.1"
cc = { version = "1.2.52", features = ["parallel"] }

[features]
logging = []
missing_ucurrsensor = []
missing_vcurrsensor = []
missing_wcurrsensor = []

