[package]
edition = "2024"
name = "port-stm32"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
mesc = { path = "../mesc" }
proto = { path = "../proto" }
proc-macros = { path = "../proc-macros" }
core-control = { path = "../core-control", optional = true }
core-supervisor = { path = "../core-supervisor", optional = true }

embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "unstable-pac",
    "exti",
    "chrono"
]}
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "rtos-trace",
    "defmt"
]}
rtos-trace = "0.2"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768"
]}
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.31", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.2"
nb = "1.1.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}
littlefs2 = { version = "0.6.1", features = ["c-stubs"] }
atomic_enum = "0.3.0"

[features]
# These only exist here for LSP ease-of-use. When building, ALWAYS use
# --no-default-features, and ideally, just use pre-configured build commands in the
# Taskfile.
default = ["board_begode_etmax"]
# Roles
role_control = ["dep:core-control"]
role_supervisor = ["dep:core-supervisor"]

# BSP definitions
board_begode_etmax = [
    "role_supervisor",
    "role_control",
    "embassy-stm32/stm32f405rg",
    "embassy-stm32/time-driver-tim5",
    "embassy-executor/scheduler-deadline"
]

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.52"
