[package]
edition = "2024"
name = "port_stm32f4"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
mesc = { path = "../mesc" }
unilance_core = { path = "../core" }

embassy-stm32 = { version = "0.5.0", features = ["defmt", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = "0.1.2"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.31", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.2"
nb = "1.1.0"
micromath = "2.1.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

[features]
board_begode_etmax = [
    "mesc/stm32f4_begode_etmax",
    "unilance_core/stm32f4_begode_etmax",
    "embassy-stm32/stm32f405rg"
]

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.52"
