[package]
name = "proto"
version = "0.1.0-alpha"
edition = "2024"

[lib]
test = true
bench = false

[dependencies]
serde = { version = "1.0.*", default-features = false }
postcard = { version = "1.1.3", features = ["experimental-derive", "heapless"]}
# Match the version in postcard
heapless = { version = "0.7.17", features = ["serde"] }
int-enum = "1.2.0"
